// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
  data-test-id="container-test-id"
/>
`;

exports[`<StatisticsBox /> should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 70px;
  margin: 16px 24px 24px;
}

<div
  className="c0"
/>
`;

exports[`<StatisticsNumbers /> should match snapshot 1`] = `
.c0 {
  font-weight: 600;
  font-size: 19px;
  line-height: 28px;
}

<div
  className="c0"
  data-test-id="STATISTICS_NUMBERS"
/>
`;

exports[`<StatisticsNumbers /> should render correctly when hasError  1`] = `
.c0 {
  font-weight: 600;
  font-size: 19px;
  line-height: 28px;
  color: #E12D2D;
}

<div
  className="c0"
  data-test-id="STATISTICS_NUMBERS"
/>
`;

exports[`<StatisticsText /> should match snapshot 1`] = `
.c0 {
  font-size: 13px;
  line-height: 18px;
  color: #5E6D7A;
}

<div
  className="c0"
  data-test-id="STATISTICS_TEXT"
/>
`;

exports[`<StatisticsText /> should render correctly when hasError  1`] = `
.c0 {
  font-size: 13px;
  line-height: 18px;
  color: #E12D2D;
}

<div
  className="c0"
  data-test-id="STATISTICS_TEXT"
/>
`;
